# PocketDevOs

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs  pty.rs
backend/src/ai/: client.rs  tools.rs
backend/src/lib/: auth.rs  security.rs
backend/src/routes/: ai.rs  fs.rs  mod.rs  shell.rs  terminal.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/lib/: api.ts
frontend/src/modules/ai/: AIChat.tsx
frontend/src/modules/dashboard/: Dashboard.tsx
frontend/src/modules/editor/: Editor.tsx
frontend/src/modules/explorer/: FileExplorer.tsx
frontend/src/modules/terminal/: Terminal.tsx
frontend/src/store/: aiStore.ts  appStore.ts  terminalStore.ts
frontend/src/styles/: globals.css
scripts/: build.sh  dev.sh  install.sh
